Fix openapi spec
